--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ffffff"
     tools:context="com.dack.alex.swimright.HelpActivity">
 
     <TextView
@@ -16,20 +17,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="100dp"
         android:id="@+id/helpMenu"
         android:textSize="24sp"
-        android:textStyle="normal|bold" />
-
-    <Button
-        android:text="@string/button_faq"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/helpMenu"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:id="@+id/buttonFAQ"
-        android:onClick="intentFAQ"/>
+        android:textStyle="normal|bold"
+        android:textColor="#000000"/>
 
     <Button
         android:text="@string/button_doc"
@@ -37,8 +29,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonDoc"
         android:layout_below="@+id/buttonFAQ"
-        android:layout_centerHorizontal="true"
-        android:onClick="intentDoc"/>
+        android:onClick="intentDoc"
+        android:textColor="#000000"
+        android:background="#6ec9b4"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -47,6 +41,20 @@
         android:layout_centerHorizontal="true"
         android:text="@string/button_main"
         android:id="@+id/buttonMain"
-        android:onClick="intentMain"/>
+        android:onClick="intentMain"
+        android:textColor="#000000"/>
+
+    <Button
+        android:text="@string/button_faq"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:id="@+id/buttonFAQ"
+        android:onClick="intentFAQ"
+        android:textColor="#000000"
+        android:background="#84ecd5"
+        android:layout_below="@+id/helpMenu"
+        android:layout_alignStart="@+id/buttonDoc"
+        android:layout_alignEnd="@+id/buttonDoc" />
 
 </RelativeLayout>
