--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ffffff"
     tools:context="com.dack.alex.swimright.runActivity">
     <Button
         android:text="@string/button_cal"
@@ -16,18 +17,22 @@
         android:layout_below="@+id/runMenu"
         android:layout_centerHorizontal="true"
         android:id="@+id/buttonSendData"
-        android:layout_marginTop="36dp"/>
+        android:layout_marginTop="32dp"
+        android:textColor="#000000"
+        android:background="#84ecd5"
+        android:onClick="intentBluetooth"/>
 
     <TextView
         android:text="@string/button_run"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="100dp"
         android:id="@+id/runMenu"
         android:textSize="24sp"
         android:textStyle="normal|bold"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="#000000"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -36,6 +41,7 @@
         android:layout_centerHorizontal="true"
         android:text="@string/button_posture"
         android:id="@+id/buttonPosture"
-        android:onClick="intentPosture"/>
+        android:onClick="intentPosture"
+        android:textColor="#000000"/>
 
 </RelativeLayout>
